Add some code for form

--- a/AngularJsEssential/directive-tmp/alert.html
+++ b/AngularJsEssential/directive-tmp/alert.html
@@ -5,5 +5,5 @@
 	<span class="alert-description" ng-transclude>
 		
 	</span>
-	<a href="" ng-click="close()">Close</a>
+	<!--<a href="" ng-click="close()">Close</a>-->
 </div>
