--- a/AngularJsEssential/index.html
+++ b/AngularJsEssential/index.html
@@ -39,9 +39,9 @@
 					restrict: "E",
 					transclude: true,
 					scope: {
-						topic: "=topic",
+						topic: "@topic"//,
 						//description: "=description",
-						close: "&close"
+						//close: "&close"
 					}
 				};
 			});
@@ -130,9 +130,10 @@
 			</tbody>    
 		</table>
 		
+		<!--
 		<alert ng-show="showAlert" topic="alertTopic" close="closeAlert()">
 			You must inform the plate and the color of the car !
-		</alert>
+		</alert>-->
 
 		<input type="text" ng-model="car.plate" placeholder="What's the plate?"/>    
 		<select ng-model="car.color" ng-options="color for color in colors">Pick a color</select>    
@@ -150,5 +151,29 @@
 				Blue - 10/10/2002 11:10 
 			</accordion-item>
 		</accordion>
+
+		<div>--- Form example ---</div>
+		<form name="carForm">
+			<alert
+				ng-show="carForm.plateField.$invalid"
+				topic="Something went wrong">
+				The plate is invalid!
+			</alert>
+
+			<input 
+				type="text" 
+				name="plateField" 
+				ng-model="car.plate" 
+				placeholder="What's the plate?"
+				ng-minlength="6"
+				ng-maxlength="10"
+				ng-pattern="/[A-Z]{3}[0-9]{3,7}/"
+				/>
+			<button
+				ng-click="park(car)"
+				ng-disabled="carForm.$invalid"
+			>Park</button>
+		</form>
+
 	</body>
 </html>
